--- a/index.html
+++ b/index.html
@@ -325,6 +325,26 @@
                         AI-powered
                         mobile apps isn’t just about innovation — it’s about building the future of digital
                         interaction.
+
+                        <div>
+                            <p>Frequently Asked Questions </p>
+                        </div>
+                        <div class="container-fluid">
+                            <h3>
+                                Have questions or feedback?
+                            </h3>
+                            <p>Get in touch with us and we‘l get back to you and help as soon as we can!</p>
+
+                            <input type="text" name="Name" id="name" placeholder="Name*">
+                            <input type="number" name="Phone" id="number" placeholder="Phone*">
+                            <br>
+                            <input type="email" name="Email" id="email" placeholder="Email*">
+                            <br>
+                            <input type="text" name="Reply" id="reply" placeholder="Reply*">
+                            <br>
+                            <button type="submit" id="submit">Submit Reply</button>
+
+                        </div>
                     </div>
 
 
